# X-MOBILITY

./: .cursorignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  README.md  arg_parser.py  evaluate.py  onnx_conversion.py  pyproject.toml  requirements.txt  setup.py  train.py  trt_conversion.py
configs/: base_train_config.gin  pretrained_gwm_train_config.gin  train_config.gin
model/: trainer.py  visualization.py
model/dataset/: data_constants.py  isaac_sim_dataset.py  semantic_label.py
model/eval/: prediction_evaluator.py  x_mobility_metrics.py
model/loss/: losses.py
model/x_mobility/: action_policy.py  conditional_unet1d.py  decoders.py  diffusion_policy.py  diffusion_rgb.py  encoders.py  rssm.py  utils.py  vector_net.py  x_mobility.py
ros2_deployment/: README.md
ros2_deployment/x_mobility_navigator/: package.xml  setup.cfg  setup.py
ros2_deployment/x_mobility_navigator/launch/: x_mobility_navigator.launch.py
ros2_deployment/x_mobility_navigator/rviz/: basic_view.rviz
ros2_deployment/x_mobility_navigator/x_mobility_navigator/: x_mobility_navigator.py
tests/: read_pqt.py
