[tool.poetry]
name = "x-mobility"
version = "0.1.0"
description = "No desc"
authors = ["ozgur"]
license = "Apache"
readme = "README.md"
packages = [ { include = "x_mobility" }]  # Optional if using as a package

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
#vggt = { path = "./vggt" }
# ✅ Core ML/DL stack

# ✅ From x-mobility
diffusers = ">=0.32.2,<0.33.0"
einops = ">=0.8.1,<0.9.0"
gin-config = ">=0.5.0,<0.6.0"
matplotlib = ">=3.10.1,<4.0.0"
moviepy = ">=2.1.2,<3.0.0"
numpy = ">=1.26.1,<3.0.0"
onnx = ">=1.17.0,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
polars = ">=1.25.2,<2.0.0"
pyarrow = ">=19.0.1,<20.0.0"
pytorch-lightning = ">=2.5.1,<3.0.0"
tensorboard = ">=2.19.0,<3.0.0"
tensorboardx = ">=2.6.2.2,<3.0.0.0"
tensorrt = ">=10.9.0.34,<11.0.0.0"
timm = ">=1.0.15,<2.0.0"
torcheval = ">=0.0.7,<0.0.8"
transformers = ">=4.49.0,<5.0.0"
wandb = ">=0.19.8,<0.20.0"

# ✅ From vggt/requirements.txt
Pillow = "*"
huggingface_hub = "*"
safetensors = "*"

# ✅ From vggt/requirements_demo.txt
gradio = "==5.17.1"
viser = "==0.2.23"
tqdm = "*"
hydra-core = "*"
omegaconf = "*"
opencv-python = "*"
scipy = "*"
onnxruntime = "*"
requests = "*"
trimesh = "*"
torch = {version = "2.6.0", source = "pytorch"}
torchvision = {version = "0.21.0", source = "pytorch"}
torchaudio = {version = "2.6.0", source = "pytorch"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
